[gd_scene load_steps=4 format=3 uid="uid://bx8qvyxnhqy3w"]

[ext_resource type="Script" path="res://militia_forge/core/component_host.gd" id="1_4hdxy"]
[ext_resource type="Script" path="res://sandbox/test_components/test_component.gd" id="2_s7hne"]
[ext_resource type="Script" path="res://sandbox/test_scenes/component_foundation_test_controller.gd" id="3_controller"]

[node name="ComponentFoundationTest" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 410.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "MilitiaForge2D - Foundation Test"

[node name="HSeparator" type="HSeparator" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Testing Component System..."

[node name="ComponentCount" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Components: 0"

[node name="HSeparator2" type="HSeparator" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Controls:
[1] - Add Test Component
[2] - Remove Test Component
[3] - Enable All Components
[4] - Disable All Components
[D] - Debug Print Components
[Q] - Quit"

[node name="TestHost" type="Node2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("1_4hdxy")

[node name="TestComponent1" type="Node" parent="TestHost"]
script = ExtResource("2_s7hne")
ready_message = "First test component initialized!"

[node name="TestComponent2" type="Node" parent="TestHost"]
script = ExtResource("2_s7hne")
ready_message = "Second test component initialized!"
print_process = true

[node name="TestController" type="Node" parent="."]
script = ExtResource("3_controller")
